--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "url-reducer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Store part of your redux state in the url",
   "main": "dist/index.js",
-  "author": "Philip Ebels",
+  "author": "Philip Ebels <philip@ableson.software>",
+  "homepage": "https://github.com/pdme/url-reducer",
   "license": "MIT",
   "scripts": {
-    "build": "yarn tsc"
+    "build": "rm -rf dist && yarn tsc"
   },
   "dependencies": {
     "@types/ramda": "^0.27.31",
