--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "commonjs",
     "target": "es6",
     "moduleResolution": "node",
-    "jsx": "react"
+    "jsx": "react",
+    "declaration": true
   }
 }
